init dataloader, framework for nn train

--- a/3DVC_Project/pose-estimation/read_data.ipynb
+++ b/3DVC_Project/pose-estimation/read_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,23 +20,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-06-09T08:03:39.075290300Z",
-     "start_time": "2023-06-09T08:03:39.074292900Z"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Change the following data folders\n",
-    "training_data_dir = \"../datasets/training_data/data\"\n",
-    "split_dir = \"../datasets/training_data/splits\""
+    "data_dir = r'D:\\OldNew\\3DVC\\pose-estimation'\n",
+    "training_data_all_dir = data_dir + '/training_data'\n",
+    "training_data_dir = training_data_all_dir + \"/data\"\n",
+    "split_dir = training_data_all_dir + \"/splits\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,29 +49,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../datasets/training_data/splits\\\\val.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Input \u001B[1;32mIn [6]\u001B[0m, in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[0m rgb_files, depth_files, label_files, meta_files \u001B[38;5;241m=\u001B[39m \u001B[43mget_split_files\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mval\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m\n",
-      "Input \u001B[1;32mIn [5]\u001B[0m, in \u001B[0;36mget_split_files\u001B[1;34m(split_name)\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21mget_split_files\u001B[39m(split_name):\n\u001B[1;32m----> 2\u001B[0m     \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[43mos\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mpath\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mjoin\u001B[49m\u001B[43m(\u001B[49m\u001B[43msplit_dir\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43mf\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[38;5;132;43;01m{\u001B[39;49;00m\u001B[43msplit_name\u001B[49m\u001B[38;5;132;43;01m}\u001B[39;49;00m\u001B[38;5;124;43m.txt\u001B[39;49m\u001B[38;5;124;43m\"\u001B[39;49m\u001B[43m)\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mr\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m      3\u001B[0m         prefix \u001B[38;5;241m=\u001B[39m [os\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mjoin(training_data_dir, line\u001B[38;5;241m.\u001B[39mstrip()) \u001B[38;5;28;01mfor\u001B[39;00m line \u001B[38;5;129;01min\u001B[39;00m f \u001B[38;5;28;01mif\u001B[39;00m line\u001B[38;5;241m.\u001B[39mstrip()]\n\u001B[0;32m      4\u001B[0m         rgb \u001B[38;5;241m=\u001B[39m [p \u001B[38;5;241m+\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m_color_kinect.png\u001B[39m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m p \u001B[38;5;129;01min\u001B[39;00m prefix]\n",
-      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: '../datasets/training_data/splits\\\\val.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "rgb_files, depth_files, label_files, meta_files = get_split_files('val')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +83,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2023-06-09T15:32:09.082196600Z"
+    }
+   },
    "outputs": [],
    "source": [
     "rgb = np.array(Image.open(rgb_files[10])) / 255   # convert 0-255 to 0-1\n",
@@ -117,7 +106,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "meta = load_pickle(meta_files[10])\n",
@@ -127,7 +118,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "meta['object_names'], meta['object_ids']"
@@ -136,7 +129,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "poses_world = np.array([meta['poses_world'][idx] for idx in meta['object_ids']])\n",
@@ -154,7 +149,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "intrinsic = meta['intrinsic']\n",
@@ -167,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "import open3d\n",
@@ -192,7 +191,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
     "boxed_image = np.array(rgb)\n",
@@ -216,19 +217,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "load_pickle(\"../datasets/testing_data/data/1-2-11_meta.pkl\").keys()"
+    "load_pickle(data_dir + \"/testing_data/data/1-2-11_meta.pkl\").keys()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "is_executing": true
+   },
    "outputs": [],
    "source": [
-    "Image.open(\"../datasets/testing_data/data/1-2-11_color_kinect.png\")"
+    "Image.open(data_dir + \"/testing_data/data/1-2-11_color_kinect.png\")"
    ]
   }
  ],
